--- a/.github/workflows/Sync.yaml
+++ b/.github/workflows/Sync.yaml
@@ -10,7 +10,9 @@ jobs:
   sync-branches:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
