--- a/.github/workflows/Sync.yaml
+++ b/.github/workflows/Sync.yaml
@@ -36,6 +36,6 @@ jobs:
 
       - name: Auto-merge the PR
         run: |
-          gh pr merge --auto --merge "$PR_URL"
+          gh pr merge --auto --merge --admin "$PR_URL"
         env:
           PR_URL: ${{ steps.create-pr.outputs.PR_URL }}
