--- a/.github/workflows/Sync.yaml
+++ b/.github/workflows/Sync.yaml
@@ -1,19 +1,20 @@
-name: Sync R1 to R2
+name: Sync R1 to R2 with Webhook Simulation
 
 on:
   push:
-    branches: [R1]
+    branches: [R1]  # Trigger when changes land in R1
 
 jobs:
-  sync-branches:
+  sync-and-merge:
     runs-on: ubuntu-latest
     permissions:
       contents: write
       pull-requests: write
-      actions: write
-
+      actions: write  # Required for workflow dispatch
+      
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           ref: R1
 
@@ -22,22 +23,40 @@ jobs:
           gh --version || sudo apt-get install gh -y
           gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Create and merge PR
-        id: sync
+      - name: Create PR from R1 to R2
+        id: create-pr
         run: |
-          # Create PR and capture URL
           PR_URL=$(gh pr create \
             --head R1 \
             --base R2 \
             --title "Auto-sync: R1 → R2" \
             --body "Automated sync")
           echo "PR_URL=$PR_URL" >> $GITHUB_OUTPUT
-          
-          # Merge PR
-          gh pr merge "$PR_URL" --merge --admin
+          echo "PR_NUMBER=$(echo $PR_URL | grep -oE '[0-9]+$')" >> $GITHUB_OUTPUT
 
-      - name: Trigger deployment with PR URL
+      - name: Merge PR (admin override)
         run: |
-          gh workflow run deploy.yaml \
-            --ref R2 \
-            -f pr_url="${{ steps.sync.outputs.PR_URL }}"
+          gh pr merge "$PR_URL" --merge --admin --delete-branch
+        env:
+          PR_URL: ${{ steps.create-pr.outputs.PR_URL }}
+
+      - name: Simulate pull_request:closed webhook
+        run: |
+          # Get PR details
+          PR_JSON=$(gh pr view ${{ steps.create-pr.outputs.PR_NUMBER }} --json headRefName,baseRefName,merged)
+          
+          # Send simulated webhook (requires admin PAT)
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.ADMIN_PAT }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/dispatches" \
+            -d '{
+              "event_type": "simulated_pr_close",
+              "client_payload": {
+                "action": "closed",
+                "merged": true,
+                "pull_request": '$PR_JSON'
+              }
+            }'
+        env:
+          ADMIN_PAT: ${{ secrets.ADMIN_PAT }}  # PAT with repo/admin permissions
